# c_cpp_playground

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  Doxyfile_MemPoolLib  LICENSE  README.md  asio  conanfile.txt  logging.ini  raise.py  raise_cmds.py  workspace.code-workspace
customErrorCodes/: CMakeLists.txt
customErrorCodes/inc/: CustomErrorCodes.h
customErrorCodes/src/: CustomErrorCodes.cpp  main.cpp
inc/: Logger.h  MemoryPool.h  MemoryPool.tpp  MemoryPoolUserConfig.h  Prime.h  ScopeGuard.h  playground_app.h  playground_app.tpp  prime.h
networking/: CMakeLists.txt
networking/src/: main.cpp
playground/: CMakeLists.txt
playground/inc/: ScopeGuard.h
playground/src/: ScopeGuard.cpp  main.cpp
prime/: CMakeLists.txt
prime/inc/: playground_app.tpp
prime/src/: Prime.cpp  main.cpp
primeNumbers/: CMakeLists.txt
primeNumbers/src/: main.cpp
src/: ConcurrentQueue.cpp  Logger.cpp  MemoryPool.cpp  Prime.cpp  ScopeGuard.cpp  playground.cpp  playground_app.cpp  prime.cpp
test/: Test_Prime.cpp
toolchains/: armLinuxGnuEABIhf.cmake  x86_64LinuxGnuGCC.cmake  x86_64MacOSGnuEABI.cmake  x86_64MacOSLLVM.cmake  x86_64Win32MinGW.cmake  x86_64WinMSVC.cmake
tst/: PrimeTest.cpp
